<resources>
    <string name="app_name">安澜</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="nav_call">我的电话</string>
    <string name="nav_friendly">我的朋友</string>
    <string name="nav_location">我的地址</string>
    <string name="nav_mail">我的邮箱</string>
    <string name="nav_task">我的任务</string>
    <string name="backup">上传</string>
    <string name="delete">删除</string>
    <string name="settings">设置</string>
    <string name="nav_view_name">安澜</string>
    <string name="nav_personal_signature">个性签名</string>
    <string name="str_recycle">超级列表</string>
    <string name="str_drawer">抽屉布局</string>
    <string name="str_snackBar">底部提示</string>
    <string name="str_email">邮箱</string>
    <string name="str_circular_progress_bar">环形进度条</string>
    <string name="str_chart">图表</string>
    <string name="str_scan">扫一扫</string>
    <string name="str_qr_code">二维码</string>
    <string name="title_activity_nav">NavActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="str_titleBar">标题栏</string>
    <string name="str_drop_down">显示pop</string>
    <string name="str_web">网页</string>
    <string name="str_sp">数据存储SP</string>
</resources>