<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_call"
            android:icon="@drawable/ic_nav_call_24"
            android:title="@string/nav_call" />
        <item
            android:id="@+id/nav_friendly"
            android:icon="@drawable/ic_nav_friendly_24"
            android:title="@string/nav_friendly" />
        <item
            android:id="@+id/nav_location"
            android:icon="@drawable/ic_nav_location_24"
            android:title="@string/nav_location" />
        <item
            android:id="@+id/nav_mail"
            android:icon="@drawable/ic_nav_mail_24"
            android:title="@string/nav_mail" />
        <item
            android:id="@+id/nav_task"
            android:icon="@drawable/ic_nav_task_24"
            android:title="@string/nav_task" />
    </group>
</menu>