<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:columnCount="1"
    android:orientation="horizontal"
    android:rowCount="6"
    android:layout_marginTop="112dp">
    <Button
        android:id="@+id/recycle_layout"
        style="?android:attr/buttonBarButtonStyle"
        android:layout_columnSpan="1"
        android:text="@string/str_recycle" />

    <Button
        android:id="@+id/snack_bar"
        style="?android:attr/buttonBarButtonStyle"
        android:layout_columnSpan="1"
        android:text="@string/str_snackBar" />

    <Button
        android:id="@+id/chart_layout"
        android:layout_columnSpan="1"
        style="?android:attr/buttonBarButtonStyle"
        android:text="@string/str_chart" />
    <Button
        android:id="@+id/web_layout"
        android:layout_columnSpan="1"
        style="?android:attr/buttonBarButtonStyle"
        android:text="@string/str_web" />
    <Button
        android:id="@+id/sp_layout"
        android:layout_columnSpan="1"
        style="?android:attr/buttonBarButtonStyle"
        android:text="@string/str_sp" />

</GridLayout>