<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <Button
        android:id="@+id/recycle_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/str_recycle" />

    <Button
        android:id="@+id/drawer_layout"
        style="?android:attr/buttonBarButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/str_drawer" />

    <Button
        android:id="@+id/chart_layout"
        style="?android:attr/buttonBarButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/str_chart" />
    <Button
        android:id="@+id/pop_layout"
        android:background="@drawable/ic_circle_drop_down"
        android:layout_width="40dp"
        android:layout_height="40dp"/>
</LinearLayout>